--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 </button>
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Für den unvergleichlichen Geschmack</div>
+                <div class="accordion-body">Für den unvergleichlichen Geschmack. Kartoffelpulver ist der "Rohstoff" für Kartoffelteig. Imbissbuden machen daraus Pommes, 
+                  Hersteller Tiefkühlwaren und andere Teigwaren. Auch Backwaren können damit hergestellt werden</div>
               </div>
             </div>
             <div class="accordion-item">
@@ -50,7 +51,8 @@
                 </button>
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Auch sau wichtig</div>
+                <div class="accordion-body">Sonnenblumenöl ist ein aus den Achänen (Früchten) der Sonnenblume gewonnenes 
+                  Pflanzenöl von hellgelber Farbe und mildem Geschmack. Es ist reich an ungesättigten Fettsäuren und dient hauptsächlich der Ernährung</div>
               </div>
             </div>
             <div class="accordion-item">
@@ -60,7 +62,8 @@
                 </button>
               </h2>
               <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Damit wirst du stark</div>
+                <div class="accordion-body">Kartoffelstärke (auch Kartoffelmehl) ist aus Kartoffeln extrahierte Stärke. Sie besteht hauptsächlich aus den Stärken Amylose und Amylopektin
+                   in einem Verhältnis von etwa 1:4 - 1:5; dazu kommen geringe Mengen von Eiweiß und Fett.</div>
               </div>
             </div>
             <div class="accordion-item">
@@ -70,7 +73,8 @@
                 </button>
               </h2>
               <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Für den Geschmack</div>
+                <div class="accordion-body">Jodiertes Speisesalz enthält circa 15 bis 25 mg Jod (als Iodat) pro Kilogramm Salz. Jodierung des verkauften Speisesalzes ist bzw. war in der Schweiz, 
+                  in Österreich, den USA sowie bis zur Wiedervereinigung in der DDR vorgeschrieben.</div>
               </div>
             </div>
             <div class="accordion-item">
@@ -80,7 +84,8 @@
                 </button>
               </h2>
               <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Auch für den Geschmack</div>
+                <div class="accordion-body">Als Zucker wird neben verschiedenen anderen Zuckerarten ein süß schmeckendes, 
+                  kristallines Lebensmittel bezeichnet, das aus Pflanzen gewonnen wird und hauptsächlich aus Saccharose besteht. </div>
               </div>
             </div>
           </div>
